apps/api/bash-plus-server-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bash-plus-server-dev
  namespace: api
  labels:
    app: bash-plus-server-dev
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: bash-plus-server-dev
