apps/api/bash-plus-server-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bash-plus-server-dev-ingress
  namespace: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api-dev.bash.plus
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bash-plus-server-dev
                port:
                  number: 8080
  tls:
    - secretName: letsencrypt-prod
      hosts:
      - api-dev.bash.plus
